objects/CCMI__Milestone_Sub_Task__c.object
<CustomObject>
    <description>Used for capturing the sub tasks that form part of the tasks in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <fields>
        <fullName>CCMI__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Task__c</fullName>
        <description>Detail record to a Milestone Task record</description>
        <inlineHelpText>The milestone task that this sub task is related to</inlineHelpText>
        <label>Task</label>
        <referenceTo>CCMI__Milestone_Task__c</referenceTo>
        <relationshipLabel>Sub Tasks</relationshipLabel>
        <relationshipName>Milestone_Sub_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCMI__Parent_Complete__c</fullName>
        <formula>ISPICKVAL(CCMI__Milestone_Task__r.CCMI__Status__c, &apos;Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__Short_Description__c</fullName>
        <description>A short description of the Sub Task</description>
        <inlineHelpText>A plain text area with a 255 character limit allows users to provide a description of the Sub Task.</inlineHelpText>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Sub Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sub Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>